[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sytyy00 <powerpyx22>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
aiofiles = "^0.7.0"
databases = "^0.4.3"
redis = "^3.5.3"
huey = "^2.3.2"
psycopg2 = "^2.9.1"
asyncpg = "^0.23.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
